<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout style="@style/loginParent"
    android:orientation="vertical"
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ScrollView style="@style/parent">

        <RelativeLayout style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <TextView
                    style="@style/headerText"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:text="App Snipp"
                    android:visibility="gone" />

                <androidx.cardview.widget.CardView
                    style="@style/loginCard"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginBottom="@dimen/loginViewsMargin"
                    android:background="@color/white"
                    android:elevation="5dp"
                    app:cardCornerRadius="@dimen/loginCardRadius">

                    <LinearLayout
                        style="@style/linearParent"
                        android:layout_gravity="center"
                        android:padding="@dimen/loginViewsMargin">

                        <TextView
                            style="@style/headerTextPrimary"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:text="@string/user_register"
                            android:textColor="@color/colorAccent" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputEmail"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/ed_fname"
                                style="@style/modifiedEditText"
                                android:hint="@string/first_name"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:textSize="15dp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/ed_lname"
                                style="@style/modifiedEditText"
                                android:hint="@string/last_name"
                                android:maxLines="1"
                                android:textSize="15dp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputPassword"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/ed_mobile"
                                style="@style/modifiedEditText"
                                android:hint="@string/mobile"
                                android:maxLines="10"
                                android:inputType="number"
                                android:textSize="15dp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/ed_email"
                                style="@style/modifiedEditText"
                                android:hint="@string/email"
                                android:textColor="@color/black"
                                android:inputType="textEmailAddress"
                                android:textSize="15dp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/ed_password"
                                style="@style/modifiedEditText"
                                android:hint="@string/password"
                                android:maxLength="8"
                                android:textColor="@color/black"
                                android:inputType="textPassword"
                                android:textSize="15dp" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <Button
                            android:id="@+id/btn_apply"
                            style="@style/loginButton"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:text="Sign In" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>