<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginParent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
       android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/otp_view"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:text="Fill OTP" />

    <EditText
        android:id="@+id/ed_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/black"
        android:hint="0000" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btn_verify"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Verify" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical"
        android:id="@+id/login_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">



            <LinearLayout
                style="@style/linearParent"
                android:layout_gravity="center"
                android:padding="@dimen/loginViewsMargin">

                <TextView
                    style="@style/headerTextPrimary"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:text="@string/login"
                    android:textColor="@color/colorAccent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/ed_mobile"
                        style="@style/modifiedEditText"
                        android:hint="@string/mobile"
                        android:maxLines="10"
                        android:inputType="number"
                        android:textSize="15dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/ed_password"
                        style="@style/modifiedEditText"
                        android:hint="@string/password"
                        android:maxLength="8"
                        android:inputType="textPassword"
                        android:textSize="15dp" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btn_login"
                    style="@style/loginButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:text="Sign In" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>